Write FullyConnectedMirrorNodeTest